[tool.poetry]
name = "kafka-fastapi-example"
version = "0.1.0"
description = ""
authors = ["BotirIslomboev <=>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
motor = "^3.6.0"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
ipython = "^8.29.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
